trm-client changelog
=================

Legend
------
* : fixed
! : changed
+ : added
- : removed

2025-09-25 v5.1.1
-------------------

* create alias command

2025-09-24 v5.1.0
-------------------

* alias command view/edit
! npm global path in settings
! sap landscape in settings
* sap landscape for mac
+ add plugins in info command
! trm-commons ^3.3.2
! trm-core ^7.5.3

2025-09-09 v5.0.2
-------------------

* fix no connection
+ fallback text for node-rfc and node-r3trans not found in info command
+ update command now self updates the client if ran without arguments

2025-09-03 v5.0.1
-------------------

+ plugin loadCommons

2025-09-03 v5.0.0
-------------------

! trm-core ^7.5.1
! trm-commons ^3.2.0
! moved settings to context
+ plugin calls
+ gracefully close connection
! moved connection prompts to commons

2025-08-13 v4.10.0
-------------------

! trm-core ^7.4.5
+ support for darwin os
+ support for r3trans dockerized

2025-07-30 v4.9.2
-------------------

! trm-commons ^2.0.0 as peer dependency and dependency

2025-07-29 v4.9.1
-------------------

! trm-core ^7.4.1
! trm-commons ^2.0.0

2025-07-29 v4.9.0
-------------------

+ handle registry unauthorized error
! trm-core ^7.4.0
! trm-commons ^1.1.0

2025-06-04 v4.8.0
-------------------

! trm-core ^7.2.1
! overwrite flag in install/update ignores existing objects replace

2025-06-03 v4.7.0
-------------------

! trm-core ^7.0.0

2025-05-29 v4.6.1
-------------------

! logging error changes
! trm-core ^6.9.0
+ landscape transport to list and view command

2025-05-08 v4.6.0
-------------------

! trm-core ^6.8.0
* saprouter in alias

2025-05-08 v4.5.0
-------------------

! trm-core ^6.7.0
! error handling
* alias command/saprouter alias save
* fix connection validators

2025-04-28 v4.4.1
-------------------

* node-r3trans version read

2025-04-28 v4.4.0
-------------------

! trm-core ^6.5.0
! trm-commons ^1.0.0

2025-04-28 v4.3.0
-------------------

! trm-core ^6.4.1

2025-04-23 v4.2.1