@@ -169,7 +169,7 @@ const install = program.command(`install`)
     .option(`-nl, --noLanguageTransport`, `Skip install of language (translations) transport (if exists).`, false)
     .option(`-nc, --noCustomizingTransport`, `Skip install of customizing transport (if exists).`, false)
     .option(`-to, --importTimeout <timeout>`, `Install transports import timeout (in seconds).`, '180')
-    .option(`-kd, --keepOriginalPackages`, `Keep original ABAP packages names.`, false)
+    .option(`-kd, --keepOriginalPackages`, `Keep original ABAP packages names.`)
     .option(`-it, --createInstallTransport`, `Create/update install transport (used for landscape transports).`, true)
     .option(`-r3, --r3transPath <path>`, `R3trans program path. (default: Environment variable R3TRANS_HOME)`)
     .option(`-sha, --integrity <sha>`, `Package integrity.`)
@@ -196,7 +196,7 @@ const update = program.command(`update`)
     .option(`-nl, --noLanguageTransport`, `Skip install of language (translations) transport (if exists).`, false)
     .option(`-nc, --noCustomizingTransport`, `Skip install of customizing transport (if exists).`, false)
     .option(`-to, --importTimeout <timeout>`, `Install transports import timeout (in seconds).`, '180')
-    .option(`-kd, --keepOriginalPackages`, `Keep original ABAP packages names.`, false)
+    .option(`-kd, --keepOriginalPackages`, `Keep original ABAP packages names.`)
     .option(`-it, --createInstallTransport`, `Create/update install transport (used for landscape transports).`, true)
     .option(`-r3, --r3transPath <path>`, `R3trans program path. (default: Environment variable R3TRANS_HOME)`)
     .option(`-sha, --integrity <sha>`, `Package integrity.`)
@@ -221,7 +221,7 @@ const _import = program.command(`import <file>`)
     .option(`-nl, --noLanguageTransport`, `Skip install of language (translations) transport (if exists).`, false)
     .option(`-nc, --noCustomizingTransport`, `Skip install of customizing transport (if exists).`, false)
     .option(`-to, --importTimeout <timeout>`, `Install transports import timeout (in seconds).`, '180')
-    .option(`-kd, --keepOriginalPackages`, `Keep original ABAP packages names.`, false)
+    .option(`-kd, --keepOriginalPackages`, `Keep original ABAP packages names.`)
     .option(`-it, --createInstallTransport`, `Create/update install transport (used for landscape transports).`, true)
     .option(`-r3, --r3transPath <path>`, `R3trans program path. (default: Environment variable R3TRANS_HOME)`)
     .option(`-sha, --integrity <sha>`, `Package integrity.`)
